<resources>
    <string name="app_name">GroupChat</string>

    <string name="action_register">Register</string>
    <string name="action_signin">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Log Out</string>
    <string name="action_send">SEND</string>
    <string name="action_stay_signedin">Stay Signed In</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_confirm_reset">Reset</string>
    <string name="action_confirm_password">Confirm</string>
    <string name="action_accept_request">Accept Request</string>
    <string name="action_reject_request">Reject Request</string>
    <string name="action_remove_request">Remove Request</string>
    <string name="action_remove_contact">Remove Contact</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_fahrenheit"> °F</string>
    <string name="action_celsius"> °C</string>
    <string name="action_get_weather">Get Weather</string>

    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="hint_chat_name">Chat Name</string>
    <string name="hint_message">Enter a message</string>
    <string name="hint_message_received">Received message</string>
    <string name="hint_message_sent">Sent message</string>
    <string name="hint_message_time">00:00</string>
    <string name="hint_old_password">Enter old password</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="hint_new_password_again">Retype new password</string>
    <string name="hint_vertical_bar">|</string>
    <string name="hint_search">Search</string>
    <string name="hint_location">Get Weather</string>

    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_chats">Chats</string>
    <string name="title_weather">Weather</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_settings">Settings</string>

    <string name="keys_prefs_jwt">Shared Prefs JWT</string>
    <string name="keys_prefs_theme">Shared Prefs Theme</string>
    <string name="keys_prefs_lat">Shared Prefs Latitude</string>
    <string name="keys_prefs_lon">Shared Prefs Longitude</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>

    <string name="text_blank">Blank Text</string>
    <string name="text_recent_chats">Recent Chat Activity</string>
    <string name="base_url">https://dhill30-groupchat-backend.herokuapp.com/</string>
</resources>