<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.groupchat.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_chatDisplayFragment"
            app:destination="@id/chatDisplayFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.tcss450.groupchat.ui.contacts.ContactsHolderFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts_holder" />
    <fragment
        android:id="@+id/navigation_chats"
        android:name="edu.uw.tcss450.groupchat.ui.chats.ChatMainFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chat_main" >
        <action
            android:id="@+id/action_navigation_chats_to_chatDisplayFragment"
            app:destination="@id/chatDisplayFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.groupchat.ui.weather.WeatherHolderFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather_holder" />
    <fragment
        android:id="@+id/chatDisplayFragment"
        android:name="edu.uw.tcss450.groupchat.ui.chats.ChatRoomFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chat_room">
        <argument
            android:name="room"
            app:argType="edu.uw.tcss450.groupchat.ui.chats.ChatRoom" />
    </fragment>
    <fragment
        android:id="@+id/navigation_change_password"
        android:name="edu.uw.tcss450.groupchat.ui.auth.password.ChangePasswordFragment"
        android:label="@string/title_change_password"
        tools:layout="@layout/fragment_change_password" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="edu.uw.tcss450.groupchat.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>