<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_change_password"
        android:orderInCategory="200"
        android:title="@string/title_change_password"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="300"
        android:title="@string/action_signout"
        app:showAsAction="never" />

    <item
        android:id="@+id/chatOptionsAdd"
        android:icon="@drawable/ic_chat_person_add_white_24dp"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/chatOptionsRemove"
        android:icon="@drawable/ic_chat_person_remove_white_24dp"
        app:showAsAction="always"
        android:visible="false"
        />

</menu>