<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changepassword.ChangePasswordFragment">

    <TextView
        android:id="@+id/text_change_password"
        android:layout_width="365dp"
        android:layout_height="53dp"
        android:layout_marginTop="64dp"
        android:text="@string/title_change_password"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_old_password"
        android:layout_width="366dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_change_password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_new_password_1"
        android:layout_width="366dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="436dp"
        android:ems="10"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_old_password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_new_password_2"
        android:layout_width="366dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_new_password_again"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_password_1" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="132dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="284dp"
        android:text="@string/action_save_password"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_password_2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>