<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailed_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:backgroundTint="@color/material_on_primary_disabled"
        android:backgroundTintMode="multiply">

        <ImageView
            android:id="@+id/image_room"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile_icon_24dp" />

        <ImageView
            android:id="@+id/image_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_room"
            app:layout_constraintEnd_toEndOf="@+id/image_room"
            app:srcCompat="@drawable/notification_circle" />

        <TextView
            android:id="@+id/label_chat_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/hint_chat_name"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_message_body"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_message_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/hint_username"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/image_room"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_message_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/ic_message_rectangle_purple"
            android:maxWidth="240dp"
            android:padding="8dp"
            android:text="@string/hint_message_received"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/image_room"
            app:layout_constraintTop_toBottomOf="@+id/text_message_name"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_message_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/hint_message_time"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toEndOf="@+id/text_message_body" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/text_message_body" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>