<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:backgroundTint="@color/material_on_primary_emphasis_medium"
    android:backgroundTintMode="multiply">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.weather.WeatherMainFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_fifty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageButton
            android:id="@+id/button_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="?attr/colorSurface"
            android:backgroundTint="@color/material_on_primary_disabled"
            android:backgroundTintMode="screen"
            android:src="@drawable/ic_refresh_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_day_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_city" />

        <TextView
            android:id="@+id/text_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_day_time" />

        <ImageView
            android:id="@+id/image_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_day_time" />

        <TextView
            android:id="@+id/text_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_fifty"
            app:layout_constraintTop_toBottomOf="@+id/text_condition" />

        <com.google.android.material.chip.Chip
            android:id="@+id/button_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:backgroundTint="@color/material_on_primary_disabled"
            android:backgroundTintMode="screen"
            android:text="@string/action_fahrenheit"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/text_degree"
            app:layout_constraintTop_toBottomOf="@+id/text_condition" />

        <com.google.android.material.chip.Chip
            android:id="@+id/button_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:backgroundTint="@color/material_on_primary_disabled"
            android:backgroundTintMode="screen"
            android:text="@string/action_celsius"
            android:textAlignment="center"
            android:textColor="@color/grey_600"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_fahrenheit"
            app:layout_constraintTop_toBottomOf="@+id/text_condition" />

        <TextView
            android:id="@+id/text_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="66dp"
            android:text="@string/hint_vertical_bar"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_fahrenheit"
            app:layout_constraintTop_toBottomOf="@+id/text_condition" />

        <TextView
            android:id="@+id/text_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_degree" />

        <TextView
            android:id="@+id/text_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_humidity" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourly_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_wind" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_wait"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryAlpha"
            android:clickable="true"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_daily_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline_fifty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourly_view">

            <TextView
                android:id="@+id/text_day_one"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/text_day_two"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/text_day_three"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/text_day_four"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/text_day_five"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textColor="?attr/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_daily_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline_fifty"
            app:layout_constraintTop_toBottomOf="@+id/hourly_view">

            <ImageView
                android:id="@+id/image_one"
                android:layout_width="36dp"
                android:layout_height="36dp" />

            <ImageView
                android:id="@+id/image_two"
                android:layout_width="36dp"
                android:layout_height="36dp" />

            <ImageView
                android:id="@+id/image_three"
                android:layout_width="36dp"
                android:layout_height="36dp" />

            <ImageView
                android:id="@+id/image_four"
                android:layout_width="36dp"
                android:layout_height="36dp" />

            <ImageView
                android:id="@+id/image_five"
                android:layout_width="36dp"
                android:layout_height="36dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_daily_temps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layout_daily_icons"
            app:layout_constraintTop_toBottomOf="@+id/hourly_view">

            <TextView
                android:id="@+id/text_weather_one"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/text_weather_two"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/text_weather_three"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/text_weather_four"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/text_weather_five"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorPrimaryDark" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weather_wait"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryAlpha"
            android:clickable="true"
            android:elevation="2dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/weather_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


